--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	version="3.0">
 
-  <display-name>Hello Java</display-name>
+  <display-name>Visitor Information System</display-name>
   <!-- 
   <servlet>
     <servlet-name>javax.ws.rs.core.Application</servlet-name>
