--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-	version="3.0">
-
-  <display-name>Visitor Information System</display-name>
-  <!-- 
+<web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee"
+ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+ <display-name>Visitor Information System</display-name>
+ <!-- 
   <servlet>
     <servlet-name>javax.ws.rs.core.Application</servlet-name>
     <load-on-startup>1</load-on-startup>
@@ -15,20 +13,33 @@
   </servlet-mapping>
   
    -->
-   
-  <servlet>
-    <servlet-name>Jersey REST Service</servlet-name>
-    <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
-     <!-- Register resources and providers under package. -->
-    <init-param>
-        <param-name>jersey.config.server.provider.packages</param-name>
-        <param-value>com.ibm.vis.resources</param-value>
-    </init-param>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Jersey REST Service</servlet-name>
-    <url-pattern>/api/*</url-pattern>
-  </servlet-mapping>
-
+ <servlet>
+  <servlet-name>Jersey REST Service</servlet-name>
+  <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+  <!-- Register resources and providers under package. -->
+  <init-param>
+   <param-name>jersey.config.server.provider.packages</param-name>
+   <param-value>com.ibm.vis.resources</param-value>
+  </init-param>
+  <load-on-startup>1</load-on-startup>
+ </servlet>
+ <servlet-mapping>
+  <servlet-name>Jersey REST Service</servlet-name>
+  <url-pattern>/api/*</url-pattern>
+ </servlet-mapping>
+ <security-constraint>
+  <display-name>VIS Authentication</display-name>
+  <web-resource-collection>
+   <web-resource-name>Full App</web-resource-name>
+   <url-pattern>/</url-pattern>
+   <url-pattern>/*</url-pattern>
+   <http-method>GET</http-method>
+   <http-method>DELETE</http-method>
+   <http-method>POST</http-method>
+   <http-method>PUT</http-method>
+  </web-resource-collection>
+  <auth-constraint>
+   <role-name>visusers</role-name>
+  </auth-constraint>
+ </security-constraint>
 </web-app>
