--- a/build.xml
+++ b/build.xml
@@ -13,7 +13,6 @@
     <path id="classpathDir">
         <pathelement location="bin"/>
     	<pathelement location="dep-jar/asm-3.3.1.jar"/>
-        <pathelement location="dep-jar/com.ibm.ws.javaee.jaxrs.1.1_1.0.1.jar"/>
     	<pathelement location="dep-jar/commons-fileupload-1.3.1.jar"/>
         <pathelement location="dep-jar/commons-io-2.4.jar"/>
         <pathelement location="dep-jar/el-api.jar"/>
@@ -40,6 +39,8 @@
     	<pathelement location="dep-jar/smtp.jar"/>
     	<pathelement location="dep-jar/imap.jar"/>
     	<pathelement location="dep-jar/dsn.jar"/>
+    	<pathelement location="dep-jar/com.ibm.websphere.security_1.0.6.jar"/>
+    	<pathelement location="dep-jar/com.ibm.ws.javaee.jaxrs.1.1_1.0.1.jar"/>
     	<pathelement location="dep-jar/commons-email-1.3.3.jar"/>
     </path>
     <target name="init">
